--- a/app/assets/stylesheets/admin/users.css
+++ b/app/assets/stylesheets/admin/users.css
@@ -1,7 +1,9 @@
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
+  width: 85%;
+  margin-left: auto;
+  margin-right: auto
 }
 
 td, th {
