--- a/app/assets/stylesheets/admin/users.css
+++ b/app/assets/stylesheets/admin/users.css
@@ -6,6 +6,10 @@ table {
   margin-right: auto
 }
 
+#show_user_table{
+  width: 50%;
+}
+
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
