--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,4 +1,4 @@
-<table style="width: 50%; margin-left: auto; margin-right: auto">
+<table id="show_user_table">
   <tr>
     <th>First Name</th>
     <td><%= @user.first_name %></td>
