Admin side generation of user invites done using devse_invitable
* Only Admin can enter ser details and send the invtation
* Admin can delete a user from user listing page
* User can accept invitation and set a password fo sign in.
* Model level updates.

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,4 +12,5 @@
   <%= render @users %>
 </table>
 
+<%= link_to "Invite a new user", new_user_invitation_path %><br>
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
