--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -3,36 +3,35 @@
 <%= form_for(resource, as: resource_name, url: invitation_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, required: true, autocomplete: "first_name" %>
-  </div><br>
+  <div class="clearfix">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name, autofocus: true, required: true, autocomplete: :first_name %>
+  </div>
 
-  <div class="field">
-    <%= f.label :middle_name %><br />
-    <%= f.text_field :middle_name, autofocus: true, autocomplete: "middle_name" %>
-  </div><br>
+  <div class="clearfix">
+    <%= f.label :middle_name %>
+    <%= f.text_field :middle_name, autofocus: true, autocomplete: :middle_name %>
+  </div>
 
-  <div class="field">
-    <%= f.label :last_name%><br />
-    <%= f.text_field :last_name, autofocus: true, required: true, autocomplete: "last_name" %>
-  </div> <br>
+  <div class="clearfix">
+    <%= f.label :last_name%>
+    <%= f.text_field :last_name, autofocus: true, required: true, autocomplete: :last_name %>
+  </div>
 
-  <div class="field">
-    <%= f.label :country%><br/>
+  <div class="clearfix">
+    <%= f.label :country%>
     <%= f.country_select :country, ["Pakistan"] %>
-    
-  </div> <br>
+  </div>
 
-  <div class="field">
-    <%= f.label "Phone Number (xxxx xxxxxxx)" %><br />
-    <%= f.telephone_field :phone_number, autofocus: true, required: true, pattern: '([0-9]{11})', max: 11, autocomplete: "phone_number" %>
-  </div><br>
+  <div class="clearfix">
+    <%= f.label "Phone Number (xxxx xxxxxxx)" %>
+    <%= f.telephone_field :phone_number, autofocus: true, required: true, pattern: '([0-9]{11})', max: 11, autocomplete: :phone_number %>
+  </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, required: true, autocomplete: "email" %>
-  </div><br>
+  <div class="clearfix">
+    <%= f.label :email %>
+    <%= f.email_field :email, autofocus: true, required: true, autocomplete: :email %>
+  </div>
 
   <div class="actions">
     <%= f.submit t("devise.invitations.new.submit_button") %>
