Admin location listing, show, edit, delete functionality implemented
* Admin lands on Location listing page right after signing in
* Login page design slightly updated
* Camp model created with location as the only column

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to CMS. You are logged in as an Admin</h1>
+<%= link_to "Camps Listing", admin_camps_path %>
 <table>
   <tr>
     <th>First Name</th>
