Pagination done using pagy gem

--- a/app/views/admin/camps/index.html.erb
+++ b/app/views/admin/camps/index.html.erb
@@ -8,5 +8,5 @@
   </tr>
   <%= render @camps %>
 </table>
-
+<%== pagy_nav(@pagy).html_safe %>
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
