PR Feedback incorporated

--- a/app/views/admin/camps/edit.html.erb
+++ b/app/views/admin/camps/edit.html.erb
@@ -1,12 +1,12 @@
 <%= form_for [:admin, @camp] do |f| %>
-  <table id="show_user_table">
+  <table id="show-camp-table">
     <tr>
       <th><%= f.label "ID" %></th>
       <td><%= @camp.id %></td>
     </tr>
     <tr>
       <th><%= f.label "Location" %></th>
-      <td><%= f.text_field :location, autofocus: true, required: true %> </td>
+      <td><%= f.text_field :location, autofocus: true, required: true %></td>
     </tr>
   </table>
 
