--- a/app/views/admin/camps/new.html.erb
+++ b/app/views/admin/camps/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for [:admin, @camp] do |f| %>
-  <table id="show_user_table">
+  <table id="show-camp-table">
     <tr>
       <th><%= f.label "Location" %></th>
       <td><%= f.text_field :location, autofocus: true, required: true %> </td>
