--- a/app/views/admin/camps/index.html.erb
+++ b/app/views/admin/camps/index.html.erb
@@ -1,12 +1,23 @@
 <%= link_to "Users Listing", admin_users_path %><br>
-<%= link_to "Add New Camp Location", new_admin_camp_path %>
+<%= link_to "Add New Camp Location", new_admin_camp_path %><br>
+
 <table>
   <tr>
-    <th>ID</th>
-    <th>Location</th>
+    <td>
+      <%= form_with method: :get, local: true do |f| %>
+        <%= f.text_field :search_key, value: params[:search_key] %>
+        <%= f.submit 'search'%>
+      <% end %>
+    </td>
+  </tr>
+  <tr>
+    <th><%= orderable 'id', @camps %></th>
+    <th><%= orderable 'location', @camps %></th>
     <th colspan="3"></th>
   </tr>
   <%= render @camps %>
-</table>
-<%== pagy_nav(@pagy).html_safe %>
+</table><br>
+
+<%== pagy_nav(@pagy).html_safe %><br>
+<button><%= link_to 'Export Locations', admin_camps_path(format: :csv) %></button><br>
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
