Camps renamed to Locations and set to work

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Camps Listing", admin_camps_path %>
+<%= link_to "Locations Listing", admin_locations_path %>
 <table>
   <tr>
     <th>First Name</th>
