--- a/app/views/admin/locations/edit.html.erb
+++ b/app/views/admin/locations/edit.html.erb
@@ -1,8 +1,8 @@
-<%= form_for [:admin, @camp] do |f| %>
+<%= form_for [:admin, @location] do |f| %>
   <table id="show-camp-table">
     <tr>
       <th><%= f.label "ID" %></th>
-      <td><%= @camp.id %></td>
+      <td><%= @location.id %></td>
     </tr>
     <tr>
       <th><%= f.label "Location" %></th>
@@ -13,4 +13,4 @@
   <%= f.submit "Update", disable_with: 'Updating...' %>
 <% end %>
 
-<%= link_to "Back", admin_camps_path %>
+<%= link_to "Back", admin_locations_path %>
