--- a/app/views/admin/locations/new.html.erb
+++ b/app/views/admin/locations/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @camp] do |f| %>
+<%= form_for [:admin, @location] do |f| %>
   <table id="show-camp-table">
     <tr>
       <th><%= f.label "Location" %></th>
@@ -9,4 +9,4 @@
   <%= f.submit "Create", disable_with: 'Adding location...' %>
 <% end %>
 
-<%= link_to "Back", admin_camps_path %>
+<%= link_to "Back", admin_locations_path %>
