--- a/app/views/admin/locations/index.html.erb
+++ b/app/views/admin/locations/index.html.erb
@@ -2,6 +2,14 @@
 <%= link_to "Add New Camp Location", new_admin_location_path %>
 <table>
   <tr>
+    <td>
+      <%= form_with method: :get, local: true do |f| %>
+        <%= f.text_field :search_key, value: params[:search_key] %>
+        <%= f.submit 'search'%>
+      <% end %>
+    </td>
+  </tr>
+  <tr>
     <th>ID</th>
     <th>Location</th>
     <th colspan="3"></th>
