Sorting implemented on Locations

--- a/app/views/admin/locations/index.html.erb
+++ b/app/views/admin/locations/index.html.erb
@@ -10,8 +10,8 @@
     </td>
   </tr>
   <tr>
-    <th>ID</th>
-    <th>Location</th>
+    <th><%= sortable "ID" %></th>
+    <th><%= sortable "LOCATION" %></th>
     <th colspan="3"></th>
   </tr>
   <%= render @locations %>
