--- a/app/views/admin/locations/index.html.erb
+++ b/app/views/admin/locations/index.html.erb
@@ -2,9 +2,10 @@
 <%= link_to "Add New Camp Location", new_admin_location_path %>
 <table>
   <tr>
+    <td></td>
     <td>
       <%= form_with method: :get, local: true do |f| %>
-        <%= f.text_field :search_key, value: params[:search_key] %>
+        <%= f.text_field :search_key, value: params[:search_key], placeholder: 'Search Locations' %>
         <%= f.submit 'search'%>
       <% end %>
     </td>
@@ -17,4 +18,6 @@
   <%= render @locations %>
 </table>
 <%== pagy_nav(@pagy).html_safe %>
+
+<%= link_to 'Export all locations', admin_locations_path(format: :csv) %><br>
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
