Admin Camps creation and listing

--- a/app/views/admin/locations/index.html.erb
+++ b/app/views/admin/locations/index.html.erb
@@ -1,5 +1,6 @@
 <%= link_to "Users Listing", admin_users_path %><br>
-<%= link_to "Add New Camp Location", new_admin_location_path %>
+<%= link_to "Add New Location", new_admin_location_path %><br>
+<%= link_to "Camps Listing", admin_camps_path %><br>
 <table>
   <tr>
     <td></td>
