Bootstrap and jQuerry integrated. Camp status toggles button incomplete

--- a/app/views/admin/camps/_camp.html.erb
+++ b/app/views/admin/camps/_camp.html.erb
@@ -13,4 +13,10 @@
   <td><%= link_to 'Show', admin_camp_path(camp) %></td>
   <td><%= link_to 'Edit', edit_admin_camp_path(camp) %></td>
   <td><%= link_to 'Delete', admin_camp_path(camp), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td>
+    <label class="switch">
+      <input type="checkbox" class="camp-status rounded-pill" >
+      <span class="slider"></span>
+    </label>
+  </td>
 </tr>
