--- a/app/views/admin/camps/index.html.erb
+++ b/app/views/admin/camps/index.html.erb
@@ -8,7 +8,8 @@
     <th>Start Date</th>
     <th>End Date</th>
     <th>Status</th>
-    <th colspan="4"></th>
+    <th>Set Status</th>
+    <th colspan="3"></th>
   </tr>
   <%= render @camps %>
 </table>
