--- a/app/views/users/camps/index.html.erb
+++ b/app/views/users/camps/index.html.erb
@@ -1,2 +1,2 @@
-<h1>This is the user index page</h1>
+<h1>This is the User Side Camps index page</h1>
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
