Wicked Wizard Gem integrated to track the application
*  Bootstrap and used to update design in some parts of application
*  User side listing oof camps
*  User selects a camp
*  User is taken to introduction page
*  User starts the application
*  10 steps are defined and only two screens are being made right now

--- a/app/views/user/camps/introduction.html.erb
+++ b/app/views/user/camps/introduction.html.erb
@@ -12,5 +12,5 @@
 
   <p>I AKNOWLEDGE AND AGREE THAT ANY INFORMATION PROVIDED IN THIS APPLICATION WILL BE COLLECTED AND PROCESSED IN ACCORDANCE WITH THE PRIVACY POLICY <%= link_to "privacy policy", "https://app.asana.com/0/1190276726178297/board" %>.</p>
 
-  <td><%= button_to "Start Camp", user_camp_path(@camp), method: :get, class: "btn btn-primary btn-lg btn-block" %></td>
+  <td><%= button_to "Start Camp", user_camps_registration_path("personal_information"), method: :get, class: "btn btn-primary btn-lg btn-block" %></td>
 </div>
