--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,5 @@
 <%= link_to "Locations Listing", admin_locations_path %>
-<table>
+<table class="table">
   <tr>
     <th>First Name</th>
     <th>Middle Name</th>
