--- a/app/views/admin/camps/_camp.html.erb
+++ b/app/views/admin/camps/_camp.html.erb
@@ -13,7 +13,7 @@
   <td>
     <label class="switch">
       <input type="checkbox" class="camp-status rounded-pill" data-remote="true"
-    data-url="camps/status_update" data-params="id="+camp.id.to_s data-method="patch" >
+    data-url="/admin/camps/<%= camp.id %>/update_status" data-method="patch" <%= "checked" if camp.status == 'active' %> >
       <span class="slider"></span>
     </label>
   </td>
