Features of camp registration finalized
* Camp end date check added
* Camp registration 10 screens added and made functional
* Dashboard created and added percentage of application completed
* Progressbar added on application screens
* jQuery implemented on screen 2 of medical information
* Making the application unedittable once submitted feature.

--- a/app/views/admin/camps/_camp.html.erb
+++ b/app/views/admin/camps/_camp.html.erb
@@ -14,7 +14,7 @@
     <label class="switch">
       <input type="checkbox" class="camp-status rounded-pill" data-remote="true"
     data-url="/admin/camps/<%= camp.id %>/update_status" data-method="patch" <%= "checked" if camp.status == 'active' %> >
-      <span class="slider"></span>
+      <span class="slider round"></span>
     </label>
   </td>
   <td><%= link_to 'Show', admin_camp_path(camp) %></td>
