--- a/app/views/admin/camps/index.html.erb
+++ b/app/views/admin/camps/index.html.erb
@@ -1,8 +1,10 @@
 <%= link_to "Users Listing", admin_users_path %><br>
-<%= link_to "Add New Location", new_admin_location_path %><br>
+<%= link_to "Locations Listing", admin_locations_path %><br><br>
+<%= link_to "Add New Camp", new_admin_camp_path %><br>
 
-<table class="table" id="admin-camps-table">
+<table class="table table-hover">
   <%= render 'camp_table', camps: @camps %>
 </table>
 
-<%= link_to "Add New Camp", new_admin_camp_path %>
+
+<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
