--- a/app/views/admin/camps/new.html.erb
+++ b/app/views/admin/camps/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for [:admin, @camp] do |f| %>
-  <table>
+  <table class="table table-hover">
     <tr>
       <th>Name</th>
       <th>Locations</th>
