--- a/app/views/admin/locations/index.html.erb
+++ b/app/views/admin/locations/index.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Users Listing", admin_users_path %><br>
+<%= link_to "Camps Listing", admin_camps_path %><br><br>
 <%= link_to "Add New Location", new_admin_location_path %><br>
-<%= link_to "Camps Listing", admin_camps_path %><br>
-<table>
+<table class="table table-hover">
   <tr>
     <td></td>
     <td>
@@ -11,7 +11,7 @@
       <% end %>
     </td>
   </tr>
-  <tr>
+  <tr class="thead-dark">
     <th><%= sortable "ID" %></th>
     <th><%= sortable "LOCATION" %></th>
     <th colspan="3"></th>
@@ -20,5 +20,5 @@
 </table>
 <%== pagy_nav(@pagy).html_safe %>
 
-<%= link_to 'Export all locations', admin_locations_path(format: :csv) %><br>
+<%= link_to 'Export all locations', admin_locations_path(format: :csv) %><br><br>
 <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
