--- a/app/views/admin/locations/show.html.erb
+++ b/app/views/admin/locations/show.html.erb
@@ -1,5 +1,5 @@
-<table id="show-camp-table">
-  <tr>
+<table class="table table-hover">
+  <tr class="thead-dark">
     <th>ID</th>
     <th>Location</th>
   </tr>
