--- a/app/views/user/camps_registrations/emergency_contact_information.html.erb
+++ b/app/views/user/camps_registrations/emergency_contact_information.html.erb
@@ -1,8 +1,10 @@
 <%= render 'progress' %><br>
 
 <%= form_for @camps_registration, url: wizard_path, method: :put do |f| %>
-  <%= f.label "Enter your age" %>
-  <%= f.text_field :age, id: "medical-input" %><br>
+  <%= f.label "Enter emergency contact number" %>
+  <%= f.telephone_field :emergency_contact, autofocus: true, required: true, pattern: '([0-9]{11})', max: 11, placeholder: '0333 1234567', autocomplete: :emergency_contact %>
+  <br><br>
+  
   <%= f.submit "Save Changes", class: "btn btn-primary" %>
 <% end %>
 
@@ -10,8 +12,8 @@
   <div class="col-sm-2">
     <%= link_to "Back", previous_wizard_path %>
   </div>
-  <div class="col-sm-9"></div>
-  <div class="col-sm-1">
+  <div class="col-sm-8"></div>
+  <div class="col-sm-2">
     <%= link_to 'skip', next_wizard_path %>
   </div>
 </div>
