--- a/app/views/user/camps_registrations/personal_information.html.erb
+++ b/app/views/user/camps_registrations/personal_information.html.erb
@@ -1,27 +1,28 @@
-<h1>Personal Information</h1>
+<%= render 'progress' %>
 
+<h1>Personal Information</h1>
 <%= form_for @camps_registration, url: wizard_path, method: :put do |f| %>
   
   <%= f.fields_for @camps_registration.user do |u| %>
     <div class="form-group mb-2">
       <%= u.label :email, class: "form-control-label" %>
-      <%= u.text_field :email, class: "form-control" %>
+      <%= u.text_field :email, class: "form-control", disabled: true %>
     </div>
     <div class="form-group mb-2">
       <%= u.label :first_name, class: "form-control-label" %>
-      <%= u.text_field :first_name, class: "form-control" %>
+      <%= u.text_field :first_name, class: "form-control", disabled: true %>
     </div>
     <div class="form-group mb-2">
       <%= u.label :middle_name, class: "form-control-label" %>
-      <%= u.text_field :middle_name, class: "form-control" %>
+      <%= u.text_field :middle_name, class: "form-control", disabled: true %>
     </div>
     <div class="form-group mb-2">
       <%= u.label :last_name, class: "form-control-label" %>
-      <%= u.text_field :last_name, class: "form-control" %>
+      <%= u.text_field :last_name, class: "form-control", disabled: true %>
     </div>
     <div class="form-group mb-2">
       <%= u.label :phone_number, class: "form-control-label" %>
-      <%= u.text_field :phone_number, class: "form-control" %>
+      <%= u.text_field :phone_number, class: "form-control", disabled: true %>
     </div>
 
   <% end %>
@@ -38,11 +39,27 @@
       </div>
       <div class="col-sm-2">
         <%= f.radio_button("gender", "other") %>
-      <%= f.label "Other" %>
+        <%= f.label "Other" %>
       </div>
     </div>
   </div>
-  <%= f.submit "Next", class: "btn btn-primary" %>
+  <br>
+  <div>
+    <%= f.label "Profile picture for application:" %><br>
+    <%= f.file_field :user_image %>
+    <% if @camps_registration.user_image.attached? %>
+      <%= image_tag(@camps_registration.user_image) %>
+    <% end %>
+  </div>
+
+  <%= f.submit "Save Changes", class: "btn btn-primary" %>
 <% end %>
-<%= link_to 'Skip', next_wizard_path %><br>
-<%= link_to 'Leave Application', user_camps_path %>
+<div class="row">
+  <div class="col-sm-2">
+    <%= link_to 'Leave Application', wizard_path(:dashboard) %>
+  </div>
+  <div class="col-sm-8"></div>
+  <div class="col-sm-2">
+    <%= link_to 'skip', next_wizard_path %>
+  </div>
+</div>
