JS Modal confirmation added

--- a/app/views/user/camps/introduction.html.erb
+++ b/app/views/user/camps/introduction.html.erb
@@ -17,4 +17,5 @@
   <% else %>
     <p>Please participate in next camp. The date for this camp has passed. Thank You!</p>
   <% end %>
+  <%= link_to 'Back', user_camps_path %>
 </div>
