--- a/app/views/user/camps_registrations/suggestions.html.erb
+++ b/app/views/user/camps_registrations/suggestions.html.erb
@@ -6,7 +6,24 @@
   <%= f.label "Please feel free to enter any suggestions that you have: " %><br>
   <%= f.text_field :suggestion %><br><br>
 
-  <%= f.submit "Save Suggestion and submit application", class: "btn btn-primary" %>
+  <div class="modal fade dd-modal" id="myModal" role="dialog">
+    <div class="modal-dialog modal-dialog-centered">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class='modal-description top-padding'>
+            <p>Are you sure you want to submit application. You cannot view or edit it afterwords.</p>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn draft-btn secondary" data-dismiss="modal">Cancel</button>
+          <%= f.submit :Next , class:'btn draft-btn primary'%>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <%= f.submit "Save Suggestion and submit application", id: 'popup', :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: "btn btn-primary" %>
 <% end %>
 
 <div class="row">
@@ -15,4 +32,3 @@
   </div>
   <div class="col-sm-9"></div>
 </div>
-
