Admin side camps registration applications show and index implemented

--- a/app/views/admin/locations/index.html.erb
+++ b/app/views/admin/locations/index.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "Users Listing", admin_users_path %><br>
+<%= link_to "Camp Applications Listing", admin_camps_registrations_path %><br>
 <%= link_to "Camps Listing", admin_camps_path %><br><br>
 <%= link_to "Add New Location", new_admin_location_path %><br>
 <table class="table table-hover">
