--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,4 @@
+<%= link_to "Camp Applications Listing", admin_camps_registrations_path %><br>
 <%= link_to "Camps Listing", admin_camps_path %><br>
 <%= link_to "Locations Listing", admin_locations_path %><br><br>
 <%= link_to "Invite a new user", new_user_invitation_path %><br>
