--- a/app/views/user/camps_registrations/medical_information.html.erb
+++ b/app/views/user/camps_registrations/medical_information.html.erb
@@ -1,15 +1,14 @@
 <%= render 'progress' %>
 <h1>MEDICAL INFORMATION</h1>
 <%= form_for @camps_registration, url: wizard_path, method: :put do |f| %>
-
   <%= f.label "Do you have any disability ?" %>
   <div class="row">
     <div class="col-sm-2" id="disability-yes">
-      <%= f.radio_button("disability", "yes", checked: (@camps_registration.disability != "")) %>
+      <%= f.radio_button("disability", "yes", checked: @camps_registration.present?) %>
       <%= f.label "Yes" %>
     </div>
     <div class="col-sm-2" id="disability-no">
-      <%= f.radio_button("disability", "no", checked: (@camps_registration.disability == "")) %>
+      <%= f.radio_button("disability", "no", checked: @camps_registration.disability.blank?) %>
       <%= f.label "No" %>
     </div>
   </div>
@@ -17,7 +16,7 @@
     <%= f.label :disability %><br>
     <%= f.text_field :disability, id: "diability-input-field" %>
   </div>
-  <div id="medical-services-question"  class="d-none">
+  <div id="medical-services-question" class="d-none">
     <%= f.label "Do you require some medical services?" %><br>
     <div class="row">
       <div class="col-sm-2">
